// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auditBlocksSemantics document has divatos and empty articles 1`] = `
Object {
  "logs": Array [
    Array [
      Array [
        "Empty \\"article\\" elements count in dom",
        Object {
          "length": 2,
        },
      ],
    ],
    Array [
      "buttons",
      Object {
        "length": 7,
      },
    ],
  ],
  "name": "block elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "address": 20,
        "article": 20,
        "button": 20,
        "details": 20,
        "div": 100,
        "form": 20,
        "section": 20,
        "summary": 20,
      },
    },
  ],
  "warnings": Array [
    "Document has much div",
    "Document has empty blocks",
  ],
}
`;

exports[`auditBlocksSemantics document has good block semantic 1`] = `
Object {
  "logs": Array [
    Array [
      "buttons",
      Object {
        "length": 7,
      },
    ],
  ],
  "name": "block elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "address": 20,
        "article": 20,
        "button": 20,
        "details": 20,
        "div": 20,
        "form": 20,
        "section": 20,
        "summary": 20,
      },
    },
  ],
  "warnings": Array [],
}
`;

exports[`auditCommonSemantics document does not have any common tag 1`] = `
Object {
  "errors": Array [],
  "name": "common elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "footer": 0,
        "header": 0,
        "main": 0,
        "nav": 0,
      },
    },
  ],
  "warnings": Array [
    "Document does not have main tag",
    "Document does not have header tag",
    "Document does not have nav tag",
  ],
}
`;

exports[`auditCommonSemantics document has each common elements 1`] = `
Object {
  "errors": Array [],
  "name": "common elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "footer": 1,
        "header": 1,
        "main": 1,
        "nav": 1,
      },
    },
  ],
  "warnings": Array [],
}
`;

exports[`auditCommonSemantics document has two header tags 1`] = `
Object {
  "errors": Array [],
  "name": "common elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "footer": 1,
        "header": 2,
        "main": 1,
        "nav": 1,
      },
    },
  ],
  "warnings": Array [],
}
`;

exports[`auditCommonSemantics document has two main tags 1`] = `
Object {
  "errors": Array [
    "Document must have one main tag",
  ],
  "name": "common elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "footer": 1,
        "header": 1,
        "main": 2,
        "nav": 1,
      },
    },
  ],
  "warnings": Array [],
}
`;

exports[`auditHeaderSemantics document does not have any headers 1`] = `
Object {
  "errors": Array [
    "Document must have one h1",
  ],
  "name": "header elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "h1": 0,
        "h2": 0,
        "h3": 0,
        "h4": 0,
        "h5": 0,
        "h6": 0,
      },
    },
  ],
}
`;

exports[`auditHeaderSemantics document has some headers 1`] = `
Object {
  "errors": Array [],
  "name": "header elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "h1": 1,
        "h2": 2,
        "h3": 3,
        "h4": 4,
        "h5": 5,
        "h6": 6,
      },
    },
  ],
}
`;

exports[`auditHeaderSemantics document has two h1 1`] = `
Object {
  "errors": Array [
    "Document must have one h1",
  ],
  "name": "header elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "h1": 2,
        "h2": 0,
        "h3": 0,
        "h4": 0,
        "h5": 0,
        "h6": 0,
      },
    },
  ],
}
`;

exports[`auditTextSemantics 1`] = `
Object {
  "errors": Array [],
  "name": "text elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "b": 2,
        "i": 3,
        "span": 1,
      },
      "name": "text elements",
    },
    Object {
      "content": Object {
        "abbr": 14,
        "blockquote": 8,
        "cite": 15,
        "code": 10,
        "dd": 16,
        "dl": 17,
        "dt": 18,
        "em": 13,
        "li": 7,
        "ol": 6,
        "p": 4,
        "pre": 19,
        "small": 9,
        "strong": 11,
        "time": 12,
        "ul": 5,
      },
      "name": "text semantic elements",
    },
  ],
}
`;

exports[`document does not any text tag 1`] = `
Object {
  "errors": Array [
    "Document does not any text tag",
  ],
  "name": "text elements count in dom",
  "tables": Array [
    Object {
      "content": Object {
        "b": 0,
        "i": 0,
        "span": 0,
      },
      "name": "text elements",
    },
    Object {
      "content": Object {
        "abbr": 0,
        "blockquote": 0,
        "cite": 0,
        "code": 0,
        "dd": 0,
        "dl": 0,
        "dt": 0,
        "em": 0,
        "li": 0,
        "ol": 0,
        "p": 0,
        "pre": 0,
        "small": 0,
        "strong": 0,
        "time": 0,
        "ul": 0,
      },
      "name": "text semantic elements",
    },
  ],
}
`;
